Correct picture spacing.

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -79,6 +79,7 @@ img.emma {
 	border: 2px solid;
 	height: 300px;
 	border-radius: 150px;
+	margin-top: -50px;
 	float: center;
 	-webkit-border-radius: 150px;
 	-moz-border-radius: 150px;
@@ -88,13 +89,13 @@ img.emma {
 }
 /*make twitter image center and resize*/
 img.twitter {
-	height: 125px;
+	height: 75px;
 	margin-left: 100px;
 	margin-top: 20px;
 }
 /*make linkedin image center and resize*/
 img.linkedin {
-	height: 150px;
+	height: 75px;
 	margin-left: -150px;
 	float: center;
 }
